Add new navigation item for 'Heading'

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,6 +5,7 @@ nav:
   - Home: index.md
   - AI Powered Developer: AI-Powered-Developer-Presentation.md
   - Speaker Script: Speaker-Script-AI-Powered-Developer.md
+  - Heading: mitesh.md
 
 plugins:
   - techdocs-core
